--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="document_width_setting">Document width (pixels)</string>
     <string name="document_height_setting">Document height (pixels)</string>
     <string name="stroke_size">Stroke size (pixels)</string>
+    <string name="pref_closed_paths">Draw closed paths</string>
+    <string name="pref_fill_color">Fill color</string>
+    <string name="pref_stroke_color">Stroke color</string>
 </resources>
