--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="settings_header">Settings</string>
     <!-- other -->
     <string name="draw_canvas_description">A canvas containing a rectangle, representing a document which users may draw on.</string>
+    <string name="toggleToolbarToggle">Show a button to toggle the toolbar</string>
 </resources>
