Add switch to save preferences when the app exits
This is actually not true--preferences are reset when the app opens if this is set to false--but this is done because the app can always be killed before it has a chance to react and reset preferences.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <!-- other -->
     <string name="draw_canvas_description">A canvas containing a rectangle, representing a document which users may draw on.</string>
     <string name="toggleToolbarToggle">Show a button to toggle the toolbar</string>
+    <string name="save_preferences_on_exit">Save preferences on exit</string>
 </resources>
