--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="save_preferences_on_exit">Save preferences on exit</string>
     <string name="action_undo">Undo</string>
     <string name="action_redo">Redo</string>
+    <string name="opt_category_file">File</string>
 </resources>
