--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- other -->
     <string name="draw_canvas_description">A canvas containing a rectangle, representing a document which users may draw on.</string>
     <string name="toggleToolbarToggle">Show a button to toggle the toolbar</string>
-    <string name="save_preferences_on_exit">Save preferences on exit</string>
+    <string name="save_preferences_on_exit">Remember preferences</string>
     <string name="action_undo">Undo</string>
     <string name="action_redo">Redo</string>
     <string name="opt_category_file">File</string>
