--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="action_undo">Undo</string>
     <string name="action_redo">Redo</string>
     <string name="opt_category_file">File</string>
+    <string name="action_set_stroke">Set stroke color</string>
+    <string name="action_set_fill">Set fill color</string>
 </resources>
