--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="action_set_stroke">Set stroke color</string>
     <string name="action_set_fill">Set fill color</string>
     <string name="action_export">Export</string>
+    <string name="simplification_amount">Line simplification amount</string>
 </resources>
